--- a/M04N02_using_web_API.ipynb
+++ b/M04N02_using_web_API.ipynb
@@ -9,18 +9,18 @@
         "\n",
         "### Using a Web API to obtain data\n",
         "\n",
-        "This example shows you how to use a web API to obtain data from NCEI.  It is the same dataset we obtained within Module 3, but here we are making small calls to get only the data we want."
+        "This example shows you how to use a web API to obtain data from NCEI.  It is the same dataset we obtained within Module 3, but here we are making small calls to get only the data we want. It is more efficient to grab data using the API instead of getting all the data"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "kp6pa5jNqCSX"
       },
       "outputs": [],
       "source": [
-        "#needed to make web requests\n",
+        "#needed to make web requests, allows you to pull data from api\n",
         "import requests\n",
         "\n",
         "#store the data we get as a dataframe\n",
@@ -39,7 +39,7 @@
         "import time\n",
         "\n",
         "#add the access token you got from NOAA # this is snesbitt's so don't mess with it!\n",
-        "Token = 'qGhKPoTezWscLZFQAzmnmBzBkrsiwroe'\n",
+        "Token = 'ZmADFjDGGMtDGrhIOkFzXylGYhZzrEby'\n",
         "\n",
         "#Enter data type and station ID from inventory - here is GHCND https://www.ncei.noaa.gov/pub/data/ghcn/daily/ghcnd-stations.txt\n",
         "station_id = 'GHCND:USC00118740'"
@@ -65,7 +65,8 @@
         "max_temps = []\n",
         "precip = []\n",
         "\n",
-        "#for each year from 1905-2022 where we know we have data inventory ...\n",
+        "# For each year from 1905-2022 where we know we have data inventory ...\n",
+        "# Do year by year because only allowed to grab 1,000 data points or so at once\n",
         "for year in range(1905, 2023):\n",
         "    year = str(year)\n",
         "    print('working on year '+year)\n",
@@ -89,6 +90,16 @@
         "    min_temps += [item['value'] for item in mintemps]\n",
         "    precip += [item['value'] for item in precips]\n",
         "    time.sleep(0.2) # API max 5 requests per second\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "d\n",
+        "r.text"
       ]
     },
     {
@@ -152,7 +163,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3.9.7 ('py3')",
+      "display_name": "Python 3.10.4 ('ml_intro')",
       "language": "python",
       "name": "python3"
     },
@@ -166,11 +177,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.7"
+      "version": "3.10.4"
     },
     "vscode": {
       "interpreter": {
-        "hash": "7a6b41cc1ffbe7f6292ade58ee9ab0c89bd7fa770a77f101cc95d5710b4e5fa9"
+        "hash": "5e4611c591ed23c6d43085bf8296035ee5e3972505a0a4701281752681929767"
       }
     }
   },
