--- a/M04N05_using_the_eofs_package.ipynb
+++ b/M04N05_using_the_eofs_package.ipynb
@@ -219,7 +219,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('py3')",
+   "display_name": "Python 3.6.8 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -233,12 +233,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.6.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "7a6b41cc1ffbe7f6292ade58ee9ab0c89bd7fa770a77f101cc95d5710b4e5fa9"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
