Added comments to project.ipynb and more details to the README

--- a/project4_atms523_blind.ipynb
+++ b/project4_atms523_blind.ipynb
@@ -588,7 +588,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Create a dataset that contains the monthly means of Sea Surface Temperature anomalies and precipitation anomalies from Jan 1979-Dec 2021 over the Pacific Basin (65°N to 65°S, 120°E to 60°W) masked out over land - save this to your computer. "
+    "1. Create a dataset that contains the monthly means of Sea Surface Temperature anomalies and precipitation anomalies from Jan 1979-Dec 2021 over the Pacific Basin (65°N to 65°S, 120°E to 60°W) masked out over land - save this to your computer. \n",
+    "\n",
+    "    The [Computations and Masks with Xarray documentation from Project Pythia](https://foundations.projectpythia.org/core/xarray/computation-masking.html) was used for help on calculating the SST and precipitation anomalies."
    ]
   },
   {
@@ -716,7 +718,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#https://foundations.projectpythia.org/core/xarray/computation-masking.html\n",
     "monthly_mean_sst_ano"
    ]
   },
@@ -771,7 +772,9 @@
    "metadata": {},
    "source": [
     "2. From the dataset shown in 1, deseasonalize (remove the mean monthly anomaly from the annual mean from each point), detrend, and standardize the SST anomalies.\n",
-    "Deseasonalization as defined here is subtracting the long term monthly mean from each month in the time series at every point in the dataset.  Your input dimensions and output dimensions will not change - it will still be time, lat, lon"
+    "Deseasonalization as defined here is subtracting the long term monthly mean from each month in the time series at every point in the dataset.  Your input dimensions and output dimensions will not change - it will still be time, lat, lon\n",
+    "\n",
+    "    The [Monthly data analysis — PyCLIM_101 0.2 documentation](https://climate.usu.edu/people/yoshi/pyclm101/monthly.html) was used for the detrend function"
    ]
   },
   {
@@ -1326,8 +1329,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#https://gist.github.com/rabernat/1ea82bb067c3273a6166d1b1f77d490f\n",
-    "\n",
     "# This function is used to detrend the SST anomalies\n",
     "\n",
     "def detrend_dim(da, dim, deg=1):\n",
@@ -1539,7 +1540,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Reconstruct the SST field using the first 5 EOFs and plot a map of the Pearson's correlation coefficient (xarray.corr) of the reconstructed monthly time series and the \"observed\" SST time series."
+    "5. Reconstruct the SST field using the first 5 EOFs and plot a map of the Pearson's correlation coefficient of the reconstructed monthly time series and the \"observed\" SST time series."
    ]
   },
   {
@@ -1624,8 +1625,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
+    "# This loads monthly precip data\n",
     "base_url = 'https://rda.ucar.edu/thredds/dodsC/files/g/ds633.1_nc/e5.moda.fc.sfc.meanflux/'\n",
     "base_url2 = '/e5.moda.fc.sfc.meanflux.235_030_mcpr.ll025sc.'\n",
     "base_url3 = '.nc'\n",
@@ -1644,12 +1644,8 @@
     "    single_file=(base_url+year+base_url2+month+'_'+month2+base_url3)\n",
     "    file_list.append(single_file)\n",
     "\n",
-    "\n",
-    "import xarray as xr\n",
     "ds_cpr = xr.open_mfdataset(file_list, parallel=True, engine='netcdf4').\\\n",
     "    sel(longitude=slice(120.,360.-60.,4), latitude=slice(65.,-65.,4))\n",
-    "\n",
-    "import pandas as pd\n",
     "\n",
     "base_url = 'https://rda.ucar.edu/thredds/dodsC/files/g/ds633.1_nc/e5.moda.fc.sfc.meanflux/'\n",
     "base_url2 = '/e5.moda.fc.sfc.meanflux.235_029_mlspr.ll025sc.'\n",
@@ -1669,8 +1665,6 @@
     "    single_file=(base_url+year+base_url2+month+'_'+month2+base_url3)\n",
     "    file_list.append(single_file)\n",
     "\n",
-    "\n",
-    "import xarray as xr\n",
     "ds_lspr = xr.open_mfdataset(file_list, parallel=True, engine='netcdf4').\\\n",
     "    sel(longitude=slice(120.,360.-60.,4), latitude=slice(65.,-65.,4))\n",
     "\n",
