Wrote code to calculate the correlation coefficient although the RDA is down right now

--- a/project4_atms523_blind.ipynb
+++ b/project4_atms523_blind.ipynb
@@ -1577,7 +1577,16 @@
     }
    ],
    "source": [
-    "reconstruction = solver.reconstructedField(5)"
+    "reconstructed_sst = solver.reconstructedField(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cc_sst = xr.corr(reconstructed_sst, monthly_mean_sst_ano, dim=\"time\")"
    ]
   },
   {
@@ -1644,8 +1653,10 @@
     "    single_file=(base_url+year+base_url2+month+'_'+month2+base_url3)\n",
     "    file_list.append(single_file)\n",
     "\n",
-    "ds_cpr = xr.open_mfdataset(file_list, parallel=True, engine='netcdf4').\\\n",
-    "    sel(longitude=slice(120.,360.-60.,4), latitude=slice(65.,-65.,4))\n",
+    "ds_cpr = xr.open_mfdataset(file_list_precip, parallel=True, chunks={'time': '100MB'}).sel(\n",
+    "    latitude=slice(pacific_north_lat,pacific_south_lat,1), longitude=slice(pacific_east_lon, pacific_west_lon,1))\n",
+    "# ds_cpr = xr.open_mfdataset(file_list, parallel=True, engine='netcdf4').\\\n",
+    "#     sel(longitude=slice(120.,360.-60.,4), latitude=slice(65.,-65.,4))\n",
     "\n",
     "base_url = 'https://rda.ucar.edu/thredds/dodsC/files/g/ds633.1_nc/e5.moda.fc.sfc.meanflux/'\n",
     "base_url2 = '/e5.moda.fc.sfc.meanflux.235_029_mlspr.ll025sc.'\n",
@@ -1664,11 +1675,36 @@
     "    # build complete file name\n",
     "    single_file=(base_url+year+base_url2+month+'_'+month2+base_url3)\n",
     "    file_list.append(single_file)\n",
-    "\n",
-    "ds_lspr = xr.open_mfdataset(file_list, parallel=True, engine='netcdf4').\\\n",
-    "    sel(longitude=slice(120.,360.-60.,4), latitude=slice(65.,-65.,4))\n",
+    "ds_lspr = xr.open_mfdataset(file_list_precip, parallel=True, chunks={'time': '100MB'}).sel(\n",
+    "    latitude=slice(pacific_north_lat,pacific_south_lat,1), longitude=slice(pacific_east_lon, pacific_west_lon,1))\n",
+    "# ds_lspr = xr.open_mfdataset(file_list, parallel=True, engine='netcdf4').\\\n",
+    "#     sel(longitude=slice(120.,360.-60.,4), latitude=slice(65.,-65.,4))\n",
     "\n",
     "ds_precip_part6 = ds_lspr['MLSPR'] + ds_cpr['MCPR']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Detrended, deseasonalized, and standardized monthly mean precipitation anomalies\n",
+    "deseason_precip_part6 = ds_precip_part6.VAR.groupby('time.month') - ds_precip_part6.VAR.groupby('time.month').mean(dim='time')\n",
+    "detrend_precip_part6 = detrend_dim(deseason_precip_part6, dim='time', deg=1)\n",
+    "climo_mean_precip_part6 = ds_precip_part6.groupby('time.month').mean('time')\n",
+    "climo_std_precip_part6 = ds_precip_part6.groupby('time.month').std('time')\n",
+    "stand_ano_precip_part6 = xr.apply_ufunc(lambda x, m, s: (x - m) / s, ds_precip_part6.groupby(\"time.month\"),climo_mean_precip_part6, climo_std_precip_part6, dask=\"parallelized\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculating the Pearson's CC between SST EOF1 and and standardized monthly mean precipitation anomalies\n",
+    "xr.corr(eofs[0], stand_ano_precip_part6, dim=\"time\")"
    ]
   },
   {
